HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallNonFunction/Expected.uv
//! Expected diagnostic metadata for the CallNonFunction rejected-source specimen.

expectedDiagnostic("E-SEM-2531", "rule.16.Call-Callee-NotFunc")
